@@ -635,7 +635,7 @@ public class UsernameTokenTest extends org.junit.Assert implements CallbackHandl
         reqData.setMsgContext(config);
         
         java.util.List<Integer> actions = new java.util.ArrayList<Integer>();
-        actions.add(new Integer(WSConstants.UT));
+        actions.add(Integer.valueOf(WSConstants.UT));
         
         handler.send(WSConstants.UT, doc, reqData, actions, true);
         
@@ -663,7 +663,7 @@ public class UsernameTokenTest extends org.junit.Assert implements CallbackHandl
         reqData.setMsgContext(config);
         
         java.util.List<Integer> actions = new java.util.ArrayList<Integer>();
-        actions.add(new Integer(WSConstants.UT));
+        actions.add(Integer.valueOf(WSConstants.UT));
         
         handler.send(WSConstants.UT, doc, reqData, actions, true);
         
